security: usar variables de entorno para passwords en docker-compose
- Cambiar passwords hardcodeados a variables de entorno
- POSTGRES_PASSWORD ahora usa ${POSTGRES_PASSWORD:-postgres}
- AIRFLOW_PASSWORD ahora usa ${AIRFLOW_PASSWORD:-admin}
- AIRFLOW_SECRET_KEY ahora usa ${AIRFLOW_SECRET_KEY:-change-me}
- Agregar variables al .env.example

Esto resuelve la alerta de GitHub Guardian sobre Generic Password.
Los valores por defecto (-postgres, -admin) son solo para desarrollo local.
En producción se deben setear en el archivo .env (que está en .gitignore).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: timescale/timescaledb:latest-pg15
     container_name: mercado_automotor_db
     environment:
-      POSTGRES_DB: mercado_automotor
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB:-mercado_automotor}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
@@ -99,11 +99,11 @@ services:
       - .env
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql://postgres:postgres@postgres:5432/airflow
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/airflow
       AIRFLOW__CORE__FERNET_KEY: ''
       AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
       AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-      AIRFLOW__WEBSERVER__SECRET_KEY: 'your_secret_key_here'
+      AIRFLOW__WEBSERVER__SECRET_KEY: ${AIRFLOW_SECRET_KEY:-change-me-in-production}
     ports:
       - "8080:8080"
     volumes:
@@ -118,7 +118,7 @@ services:
       - mercado_automotor_network
     command: >
       bash -c "airflow db init &&
-               airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
+               airflow users create --username ${AIRFLOW_USER:-admin} --password ${AIRFLOW_PASSWORD:-admin} --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
                airflow webserver & airflow scheduler"
 
 volumes:
