--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/mercado_automotor
 DATABASE_POOL_SIZE=5
 DATABASE_MAX_OVERFLOW=10
 
+# Docker PostgreSQL (para docker-compose)
+POSTGRES_DB=mercado_automotor
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 REDIS_CACHE_TTL=3600
@@ -35,6 +40,9 @@ AIRFLOW__CORE__EXECUTOR=LocalExecutor
 AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql://postgres:postgres@localhost:5432/airflow
 AIRFLOW__CORE__LOAD_EXAMPLES=False
 AIRFLOW__WEBSERVER__SECRET_KEY=your_secret_key_here
+AIRFLOW_USER=admin
+AIRFLOW_PASSWORD=admin
+AIRFLOW_SECRET_KEY=change-me-in-production
 
 # Streamlit
 STREAMLIT_SERVER_PORT=8501
